# openrpc-gen

./: Cargo.toml  README.md  dest.rs  example-config.toml
src/: command_line.rs  config.rs  deps.rs  fix.rs  gen.rs  main.rs
src/parse/: logic.rs  mod.rs
