[package]
name = "openrpc-gen"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to generate Rust files from OpenRPC documents."
authors = ["Nils Mathieu <contact@nils-mathieu.fr>"]
license = "MIT"
repository = "https://github.com/nils-mathieu/openrpc-gen"
readme = "README.md"
keywords = ["openrpc", "cli", "codegen", "json-rpc"]

[dependencies]
open-rpc = { version = "0.1", features = ["relaxed"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
convert_case = "0.6"